trunk/Archive2/51/2e8667dde4c62e/output
main.cpp: In member function 'node Queue::pop()':
main.cpp:62:8: error: base operand of '->' has non-pointer type 'node'
   value->name = temp;
        ^
main.cpp: In function 'int main(int, char**)':
main.cpp:81:21: warning: unused variable 'z' [-Wunused-variable]
  int namex=0,matx=0,z=0;
                     ^
main.cpp:82:8: warning: unused variable 'tempchar' [-Wunused-variable]
  char* tempchar;
        ^
